Introduced configuration class for local nodes